kubernetes-manifests/quality-assurance/postgres-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: sonar
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
      name: postgres
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: sonar
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      securityContext:
        fsGroup: 2000
      containers:
        - name: postgress
          image: bitnami/postgresql
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres
              mountPath: /bitnami/postgresql
      volumes:
        - name: postgres
          persistentVolumeClaim:
            claimName: postgres-pvc
---
