kubernetes-manifests/quality-assurance/sonar-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonar
  namespace: sonar
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: sonar.liberty52.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonar-svc
                port:
                  number: 9000
